--- a/2.1.0/package.json
+++ b/2.1.0/package.json
@@ -7,6 +7,7 @@
     "gulp-clean": "~0.3.1",
     "gulp-copy": "0.0.2",
     "gulp-filter": "^1.0.2",
+    "gulp-jsdoc": "~0.1.4",
     "gulp-jshint": "~1.10.0",
     "gulp-kclean": "1.0.3",
     "gulp-kmc": "~1.0.28-beta",
