--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "xplayer",
-  "version": "2.0.4",
+  "version": "2.1.0",
   "private": true,
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-copy": "",
-    "grunt-contrib-cssmin": "~0.5.0",
-    "grunt-contrib-less": "~0.5.0",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-jsdoc": "^0.5.6",
-    "grunt-kmc": "~0.1.1",
-    "grunt-replace": "^0.8.0",
-    "matchdep": "^0.3.0"
+    "gulp": "^3.8.7",
+    "gulp-clean": "~0.3.1",
+    "gulp-copy": "0.0.2",
+    "gulp-filter": "^1.0.2",
+    "gulp-jsdoc": "~0.1.4",
+    "gulp-jshint": "~1.10.0",
+    "gulp-kclean": "1.0.3",
+    "gulp-kmc": "~1.0.28-beta",
+    "gulp-minify": "0.0.5",
+    "gulp-rename": "^1.2.0",
+    "gulp-replace": "~0.5.3",
+    "gulp-uglify": "^1.0.1",
+    "gulp-util": "^3.0.0",
+    "gulp-xtemplate": "~2.1.0",
+    "jshint-stylish": "~1.0.1",
+    "xtemplate": "~4.2.0"
   }
 }
